# theseus-lib

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
include/theseus/: alignment.h  gfa_graph.h  graph.h  penalties.h  theseus_aligner.h  theseus_msa_aligner.h
tests/: doctest_main.cpp
tests/interactive/: align_msa_benchmark.cpp  mapping_benchmark.cpp
tests/unit/: msa_tests.cpp  seq_to_graph_tests.cpp  vector.cpp
theseus/: alignment.cpp  arena_mem_pool.h  beyond_scope.h  cell.h  gfa_graph.cpp  gfa_graph.h  graph.cpp  graph.h  growing_allocator.h  growing_mem_pool.h  internal_penalties.cpp  internal_penalties.h  manual_capacity_vector.h  mem_pool.h  mem_pool_allocator.h  mem_pool_arena.h  mem_pool_wavefront.h  msa.h  penalties.cpp  read_gfa.h  scope.cpp  scope.h  scratchpad.h  segmented_vector.h  theseus_aligner.cpp  theseus_aligner_impl.cpp  theseus_aligner_impl.h  theseus_msa_aligner.cpp  utils.cpp  utils.h  vector.h  vertices_data.h  wavefront.h  wavefront_mem_pool.h
tools/: theseus_aligner.cpp  theseus_msa.cpp
